# quanttide-example-of-python-project

./: .gitignore  README.md  pyproject.toml
docs/images/: README.md
project_name/: README.md  __main__.py  settings.yml
project_name/scripts/: README.md
